--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ out/
 
 # Ignores development broadcast logs
 !/broadcast
+/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
 # Docs
@@ -15,6 +16,7 @@ node_modules
 /artifacts
 /lib
 /dist
+
 
 /typechain-types
 package-lock.json
